tests/ui/bad_derive_missing_attributes.stderr
error[E0277]: Type `Foo` cannot perform safe addition.
  --> tests/ui/bad_derive_missing_attributes.rs:23:1
   |
23 | #[safe_math]
   | ^^^^^^^^^^^^ the trait `SafeAdd` is not implemented for `Foo`
   |
   = note: Add `add` to `#[SafeMathOps(...)]` when deriving `SafeMathOps`.
note: required by a bound in `safe_math::safe_add`
  --> src/impls.rs
   |
   | / impl_safe_math_ops!(
   | |     safe_add => {
   | |     -------- required by a bound in this function
   | |         trait: SafeAdd,
   | |         desc: "addition with overflow"
...  |
   | | );
   | |_^ required by this bound in `safe_add`
   = note: this error originates in the attribute macro `safe_math` which comes from the expansion of the macro `impl_safe_math_ops` (in Nightly builds, run with -Z macro-backtrace for more info)
